2010-12-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp (display-doc): Add another method where a
	CLFSWM native window is used to display the key documentation.

2010-12-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Force to revert to the
	main mode state.

2010-12-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (second-key-mode): Call the second
	mode leave function only when the generic mode was ended.

2010-12-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (sm-leave-function): Do not use
	*second-mode-program* anymore.

2010-12-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-second-mode.lisp (*second-mode-leave-function*): New
	variable bound to a function executed (when not null) on second
	mode leaving.

2010-11-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (find-child-under-mouse): Do not find
	hidden windows.

2010-11-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-mode-display-accel-windows):
	Do not display the accel window for unmanaged windows.

2010-11-11  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (set-current-root): Handle
	window-parent in set-current-root.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Do not
	focus the parent child when the current root is a window.

2010-11-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-windows-current-child-mode):
	New function an bindings.

	* src/clfswm-layout.lisp (tile-layout, set-tile-layout): Fill
	blanks if needed.

2010-11-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-layout-ask-keep-position): New
	function to let the user choose to keep child position with
	tile layout.

	* src/clfswm-internal.lisp (remove-frame-data-slot): New
	function.
